[package]
name        = "gama-deep"
version     = "0.1.0"
edition     = "2021"
description = "GAMA-Deep — ML analysis module for GAMA-Intel"
authors     = ["CenturiaLabs / ClickSafe UAE"]

[[bin]]
name = "gama-deep"
path = "src/main.rs"

[lib]
name       = "gama_deep_lib"
path       = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Numerics — pure Rust, zero system dependencies, always compiles
ndarray        = { version = "0.16", features = ["rayon"] }
ndarray-rand   = "0.15"
rand           = "0.9"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Model persistence — safetensors-compatible format via npz
zip = { version = "2", default-features = false, features = ["deflate"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon              = "1"
walkdir            = "2"
dirs               = "5"

[features]
default = []

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
